fix(18360): dynamically apply favicon links from configuration

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
   <meta property="og:image" content="/active/preview.png?{{.CurrentQueries}}">
-  <link rel="icon" href="/active/api/favicon.ico" sizes="32x32">
-  <link rel="icon" href="/active/api/favicon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="/active/api/apple-touch-icon.png">
+  <link rel="icon" href="/active/api/favicon.ico" sizes="32x32" id="favicon-ico">
+  <link rel="icon" href="/active/api/favicon.svg" type="image/svg+xml" id="favicon-svg">
+  <link rel="apple-touch-icon" href="/active/api/apple-touch-icon.png" id="favicon-apple-touch">
   <link rel="manifest" href="/active/static/manifest.webmanifest">
   <!-- Scripts -->
   <% if (VITE_SPACING_JS===true) { %>
