feat(18360): generate webmanifest based on app configuration

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <link rel="icon" href="/active/api/favicon.ico" sizes="32x32" id="favicon-ico">
   <link rel="icon" href="/active/api/favicon.svg" type="image/svg+xml" id="favicon-svg">
   <link rel="apple-touch-icon" href="/active/api/apple-touch-icon.png" id="favicon-apple-touch">
-  <link rel="manifest" href="/active/static/manifest.webmanifest">
+  <!-- Manifest is generated dynamically after the configuration is loaded -->
+  <link rel="manifest">
   <!-- Scripts -->
   <% if (VITE_SPACING_JS===true) { %>
     <script src="https://unpkg.com/spacingjs" async></script>
