migration, fixes, sections in md

--- a/index.html
+++ b/index.html
@@ -13,15 +13,11 @@
   <link rel="apple-touch-icon" href="/active/api/apple-touch-icon.png" id="favicon-apple-touch">
   <!-- Manifest is generated dynamically after the configuration is loaded -->
   <link rel="manifest">
-  <!-- Scripts -->
-  <% if (VITE_SPACING_JS===true) { %>
-    <script src="https://unpkg.com/spacingjs" async></script>
-    <% } %>
 </head>
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/index.ts"></script>
+  <script type="module" src="/src/main.tsx"></script>
 </body>
 
 </html>
