Making DN FE a purely web app

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-  <meta property="og:image" content="/active/preview.png?{{.CurrentQueries}}">
+  <!--#echo var="meta-og-image-preview" encoding="none"-->
   <link rel="icon" href="/active/api/favicon.ico" sizes="32x32" id="favicon-ico">
   <link rel="icon" href="/active/api/favicon.svg" type="image/svg+xml" id="favicon-svg">
   <link rel="apple-touch-icon" href="/active/api/apple-touch-icon.png" id="favicon-apple-touch">
