--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport"
-    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta property="og:image" content="/active/preview.png?{{.CurrentQueries}}" />
+    <link rel="icon" href="/active/api/favicon.ico" sizes="32x32" id="favicon-ico" />
+    <link
+      rel="icon"
+      href="/active/api/favicon.svg"
+      type="image/svg+xml"
+      id="favicon-svg"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="/active/api/apple-touch-icon.png"
+      id="favicon-apple-touch"
+    />
+    <!-- Manifest is generated dynamically after the configuration is loaded -->
+    <link rel="manifest" />
+  </head>
 
-  <meta property="og:image" content="/active/preview.png?{{.CurrentQueries}}">
-  <link rel="icon" href="/active/api/favicon.ico" sizes="32x32" id="favicon-ico">
-  <link rel="icon" href="/active/api/favicon.svg" type="image/svg+xml" id="favicon-svg">
-  <link rel="apple-touch-icon" href="/active/api/apple-touch-icon.png" id="favicon-apple-touch">
-  <!-- Manifest is generated dynamically after the configuration is loaded -->
-  <link rel="manifest">
-</head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
